--- CHANGES SINCE UASNIFFER 1.3 (under development) --------------------------

* Added unit test for Firefox 16 on Mac OS X 10.8.1.
* Added unit test for Fennec 9.0 (Firefox Mobile) on Android.
* Added unit test for Opera 8.0 masquerading as MSIE 6.0.
* Added unit test for Opera 8.5 masquerading as MSIE 6.0.


--- CHANGES SINCE UASNIFFER 1.2 (September 3, 2012) --------------------------

* Introduced 'BrowserEngine-Trident-MSIE' (with versions) to make it possible
  to detect browsers that render with the same engine as MSIE version X. 
* Now detecting Sleipnir browser. This changes the behaviour: Sleipnir on
  Windows is no longer detected as MSIE.
* Added unit test for Sleipnir 2.8.1 on Windows XP.
* Added unit test for Sleipnir 2.8.4 on Windows XP.
* Added unit test for Sleipnir 2.9.9 on Windows Vista.
* Added unit test for Sleipnir 3.7 on Mac OS X 10.8.1.
* Now detecting Tasman rendering engine (MSIE 5 on Mac).
* Added unit test for Internet Explorer 5.0 on Mac PPC.
* Added unit test for Internet Explorer 5.0 on Mac OS X.
* Fixed: Samsung S8500 was detected as desktop device, not phone.
* Added unit test for in-app browser on iOS 5.1.1/iPhone.
* Added unit test for Mobile Safari on iOS 5.1.1/iPhone.
* Added unit test for Mobile Safari on iOS 6/iPad.
* Added unit test for OmniWeb 4.2.1.
* Added unit test for Konqueror 4.5 on FreeBSD.
* Added unit test for Chromium 18 on Linux.
* Added unit test for Chrome 22 on Windows.
* Added unit test for Maxthon 3.0 on Windows Vista.
* Added unit test for iCab 4.8 on Mac OS X 10.6.8. Had to apply small fix.
* Added unit test for Firefox 3.1 alpha. Had to apply a small fix.
* Added unit test for Internet Explorer 10 on Windows 8.
* Added unit test for Internet Explorer 10 Compatibility Mode on Windows 8.
* Added unit test for Firefox 14 on Firefox OS. Had to apply a small fix.
* Added unit test for Firefox 15 on Mac OS X 10.8.
* Added unit test for Opera 11.66 on Mac OS X 10.8.1.