@@ -3412,6 +3412,20 @@ BrowserEngine-Presto-2
 BrowserEngine-Presto-2-2
 BrowserEngine-Presto-2-2-0
 
+# Opera Mini 10.54
+Opera/9.80 (J2ME/MIDP; Opera Mini/9.80 (S60; SymbOS; Opera Mobi/23.348; U; en) Presto/2.5.25 Version/10.54
+Device-Mobile
+Device-Phone
+Browser-Opera
+Browser-OperaMini
+Browser-OperaMini-10
+Browser-OperaMini-10-5
+Browser-OperaMini-10-5-4
+BrowserEngine-Presto
+BrowserEngine-Presto-2
+BrowserEngine-Presto-2-5
+BrowserEngine-Presto-2-5-25
+
 
 #-----------------------------------------------------------------------------
 # Opera Mobile
